--- a/web/assets/scss/sections/FrontSiteBundle/_interactiveWebMap.scss
+++ b/web/assets/scss/sections/FrontSiteBundle/_interactiveWebMap.scss
@@ -42,6 +42,7 @@
     border-top: 1px solid #5c5c5c;
     margin-top: 20px;
     padding-top: 20px;
+    text-align: center;
   }
 }
 
